// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelCellBooleanIcon > renders custom class 1`] = `
<DocumentFragment>
  <span />
</DocumentFragment>
`;

exports[`ModelCellBooleanIcon > renders empty icon 1`] = `
<DocumentFragment>
  <span />
</DocumentFragment>
`;

exports[`ModelCellBooleanIcon > renders false icon 1`] = `
<DocumentFragment>
  <span />
</DocumentFragment>
`;

exports[`ModelCellBooleanIcon > renders true icon 1`] = `
<DocumentFragment>
  <span />
</DocumentFragment>
`;

exports[`ModelCellBooleanIcon > should render the component with className from inherited props 1`] = `
<DocumentFragment>
  <span />
</DocumentFragment>
`;

exports[`ModelCellBooleanIcon > should render the empty text when value is nullish 1`] = `
<DocumentFragment>
  <span />
</DocumentFragment>
`;

exports[`ModelCellBooleanIcon > should render the overridden empty text when value is nullish 1`] = `
<DocumentFragment>
  <span />
</DocumentFragment>
`;

exports[`ModelCellBooleanIcon > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellBooleanIcon > should render with global override shorthand for model 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellBooleanIcon > should render with global override shorthand for model and attribute 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
